# KashinAI2

./: .dockerignore  .env.example  .gitignore  AUDIT.md  CHANGELOG.md  Caddyfile  DEPLOY.md  Dockerfile  LICENSE  ROADMAP.md  SECURITY.md  docker-compose.cloudflare.yml  docker-compose.yml  eslint.config.js  fly.toml  package-lock.json  package.json  readme.md  tsconfig.json
desktop/: .gitignore  README.md  package.json
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: requirements-v1.2.md
kashinai-extension/: background.js  manifest.json
kashinai-vscode/: README.md  package.json  tsconfig.json
prisma/: dev.db  schema.prisma
public/: index.html
src/: app.ts  config.ts  loadEnv.ts  server.ts
tests/: actionExecutor.test.ts  actionLog.test.ts  activeAppState.test.ts  apiKeys.test.ts  auth.test.ts  binaryCheck.test.ts  browserHistoryDb.test.ts  browserPaths.test.ts  config.test.ts  conversationHistory.test.ts  conversationStore.test.ts  e2e.actions.test.ts  e2e.chatStream.test.ts  e2e.manage.test.ts  e2e.ops.test.ts  e2e.rateLimit.test.ts  githubIntegration.test.ts  gmailIntegration.test.ts  inputValidation.test.ts  integrationStatus.test.ts  integrationsRegistered.test.ts  jiraIntegration.test.ts  linearIntegration.test.ts  logger.test.ts  metrics.test.ts  metricsHistory.test.ts  noiseFilter.test.ts  notifyFormat.test.ts  notifyIntegrations.test.ts  notifyOnFailure.test.ts  notifyScheduler.test.ts  notifyService.test.ts  notionIntegration.test.ts  (+14 more)
(+81 files in other folders)
