[package]
name = "kashinai2-desktop"
version = "1.7.0"
description = "KashinAI2 desktop app"
authors = ["Torutesu"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "kashinai2_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
